[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites/sketch-1599006168070.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "punchEmpty"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MySprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "punchHurt"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MySprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Move"

[sub_resource type="AnimationNodeStateMachine" id=6]
states/Move/node = SubResource( 5 )
states/Move/position = Vector2( 202, 67 )
start_node = "Move"

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "punchEmpty"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "punchHurt"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/punchEmpty/node = SubResource( 8 )
states/punchEmpty/position = Vector2( 169.5, 90 )
states/punchHurt/node = SubResource( 9 )
states/punchHurt/position = Vector2( 441.5, 90.25 )
transitions = [ "punchEmpty", "punchHurt", SubResource( 10 ), "punchHurt", "punchEmpty", SubResource( 11 ) ]
start_node = "punchEmpty"

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[node name="Punch" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )
speed = 10

[node name="MySprite" type="Sprite" parent="."]
position = Vector2( 0, 1.81502 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2( 0, 1.5 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 2 )
anims/punchEmpty = SubResource( 3 )
anims/punchHurt = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 7 )

[node name="AnimationTree2" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )

[node name="RayCast" type="RayCast2D" parent="."]
scale = Vector2( 1, -1 )
enabled = true
collision_mask = 7

[node name="RayCast2" type="RayCast2D" parent="."]
rotation = 1.5708
scale = Vector2( 1, -1 )
enabled = true
collision_mask = 7

[node name="RayCast3" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2( 1, -1 )
enabled = true
collision_mask = 7
